force-app/main/default/objects/Sports_Organization__c/Sports_Organization__c.object-meta.xml
<CustomObject>
    <description>Organizations that provide inclusive sports programs.</description>
    <label>Sports Organization</label>
    <nameField>
        <label>Organization Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sports Organizations</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>