force-app/main/default/objects/Sports_Organization__c/fields/Accessibility_Contact__c.field-meta.xml
<CustomField><fullName>Accessibility_Contact__c</fullName><label>Accessibility Contact</label><length>255</length><type>Text</type></CustomField>