force-app/main/default/objects/Sports_Organization__c/fields/Contact_Phone__c.field-meta.xml
<CustomField><fullName>Contact_Phone__c</fullName><label>Contact Phone</label><type>Phone</type></CustomField>