force-app/main/default/objects/Sports_Organization__c/fields/Data_Source__c.field-meta.xml
<CustomField><fullName>Data_Source__c</fullName><label>Data Source</label><length>255</length><type>Text</type></CustomField>