force-app/main/default/objects/Sports_Organization__c/fields/Last_Verified_Date__c.field-meta.xml
<CustomField><fullName>Last_Verified_Date__c</fullName><label>Last Verified Date</label><type>Date</type></CustomField>