force-app/main/default/objects/Sports_Organization__c/fields/Region__c.field-meta.xml
<CustomField><fullName>Region__c</fullName><label>Region</label><length>100</length><type>Text</type></CustomField>