force-app/main/default/objects/Sports_Organization__c/fields/Website__c.field-meta.xml
<CustomField><fullName>Website__c</fullName><label>Website</label><type>Url</type></CustomField>